<resources>
    <string name="app_name">RUPizzeria</string>
    <string name="logoImage">Logo Image</string>

    <string name="chicago_style">Chicago Style</string>
    <string name="ny_style">New York Style</string>
    <string name="flavor">Flavor</string>
    <string name="size">Size</string>
    <string name="toppings">Toppings</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="default_price">$0.00</string>
    <string name="pizzaImage">Pizza Image</string>
    <string name="addToOrder">Add to Order</string>
    <string name="backToMain">Back to Homepage</string>

    <string name="current_order">Current Order</string>
    <string name="store_orders">Store Orders</string>
    <string name="orderID">Order ID</string>
    <string name="placedPizzas">Placed Pizzas</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Sales Tax</string>
    <string name="total">Total</string>
    <string name="reviewOrder">Review Order</string>
    <string name="removePizza">Remove Pizza</string>
    <string name="clearOrder">Clear Order</string>
    <string name="placeOrder">Place Order</string>
    <string name="ordersRemaining">Orders Remaining</string>
    <string name="placedOrders">Placed Orders</string>
    <string name="cancelOrders">Cancel Orders</string>
    <string name="exportOrders">Export Orders</string>

    <string-array name="flavors">
        <item>Deluxe</item>
        <item>Meatzza</item>
        <item>BBQChicken</item>
        <item>BuildYourOwn</item>
    </string-array>

    <string-array name="sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>